Fix more bugs and update client to work with refactor